Move Android physical keyboard accent handling into Blink

Our current implementation of physical keyboard accent marks works by setting a
composition on the accent mark when we receive a dead key, and replacing the
composition range with the joined character when we receive a letter keypress
that can be joined with the accent (or just committing the accent before
handling the keypress if it's not joinable).

Gboard 6 made a change causing it to balk upon seeing the composition and
immediately call finishComposingText(), which makes it impossible to combine the
accent with a letter. So our current implementation has been broken with every
version of Gboard released in over a year.

This CL rewrites our dead key handling to work like the native Android TextView.
Upon receiving a dead key, we allow the key event to be handled by Blink as
normal, and select it. When we receive the next key press, if the selection
hasn't been moved, we determine whether or not it can be combined with the typed
accent and proceed accordingly. With this CL, the user experience typing accents
on a physical keyboard is just about exactly the same as in a native TextView.
It also has the nice property that we don't have to intercept any key presses in
browser code and mess up keydown/keyup events.

Bug: 768981
Change-Id: Ic225383354f2a6fb92d0d5de0199a1ad345c9db0